--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
