--- a/.github/workflows/build-and-tests.yml
+++ b/.github/workflows/build-and-tests.yml
@@ -13,6 +13,23 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+      - name: Set up environment variables
+        env:
+          NEXT_PUBLIC_APIKEY: ${{ secrets.NEXT_PUBLIC_APIKEY }}
+          NEXT_PUBLIC_AUTHDOMAIN: ${{ secrets.NEXT_PUBLIC_AUTHDOMAIN   }}
+          NEXT_PUBLIC_APPID: ${{ secrets.NEXT_PUBLIC_APPID }}
+          NEXT_PUBLIC_MEASUREMENTID: ${{ secrets.NEXT_PUBLIC_MEASUREMENTID }}
+          NEXT_PUBLIC_MESSAGINGSENDERID: ${{ secrets.NEXT_PUBLIC_MESSAGINGSENDERID }}
+          NEXT_PUBLIC_PROJECTID: ${{ secrets.NEXT_PUBLIC_PROJECTID }}
+          NEXT_PUBLIC_STORAGEBUCKET: ${{ secrets.NEXT_PUBLIC_STORAGEBUCKET }}
+        run: 
+          echo $NEXT_PUBLIC_APIKEY >> .env.local
+          echo $NEXT_PUBLIC_AUTHDOMAIN >> .env.local
+          echo $NEXT_PUBLIC_MEASUREMENTID >> .env.local
+          echo $NEXT_PUBLIC_APPID >> .env.local
+          echo $NEXT_PUBLIC_MESSAGINGSENDERID >> .env.local
+          echo $NEXT_PUBLIC_PROJECTID >> .env.local
+          echo $NEXT_PUBLIC_STORAGEBUCKET >> .env.local
       - name: Install dependencies
         run: npm ci
       - name: Build Next.js app
