feat: set up env variables

--- a/.github/workflows/build-and-tests.yml
+++ b/.github/workflows/build-and-tests.yml
@@ -3,9 +3,12 @@ on:
   push:
     branches:
       - main
+      - develop
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_APIKEY: ${{ secrets.NEXT_PUBLIC_APIKEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
