--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
+    "eslint-config-next": "^13.4.1",
     "firebase": "^9.21.0",
-    "next": "13.3.1",
+    "next": "^13.4.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
